# RecoveryIntelligenceSystem

./: .gitignore  README.md
data/cases/case_001/: mri_notes.txt  (+3 more)
data/policies/: kaiser_urls.txt
data/policy_cache/: 2001_kaiser_foundation_health_plan_of_washington_all_rights_reserved_back_to_top_642b343168.txt  acl_repair_a1bd0a4213.txt  kaiser_permanente_nd_a_hmo_provider_598cddb2c2.txt  occupational_and_physical_therapy_page_1_of_13_91901448ee.txt  (+1 more)
prototype/: Plan.md  README.md  [English (auto-generated)] Agents Assemble Challenge Getting Started [DownSub.com].txt  background.md  case.md  clinical_agent_prompt.md  lessons.md  main.py  progress.md  pyproject.toml  run_clinical_llm.py  run_insurance_llm.py  run_orchestrator_demo.py  run_policy_retriever.py
prototype/bucketed_retrieval/: bucketed_policy_retriever.py  build_snippets.py  policy_domain_filter.py  policy_fetcher.py  policy_map.py  policy_router.py  policy_types.py
prototype/data/policies/: kaiser_urls.txt
prototype/data/policy_snippets/: snippets.jsonl
prototype/src/hackathon_agent/: __init__.py  a2a.py  app.py  clinical_agent.py  clinical_contract.py  clinical_llm_agent.py  clinical_prompt.py  demo_data.py  fetch_policy_pages.py  gemini_llm.py  insurance_agent.py  insurance_benefits_agent.py  insurance_contract.py  insurance_llm_agent.py  insurance_prompt.py  insurance_retriever.py  llm.py  orchestrator.py  policy_map.py  policy_retriever.py  policy_router.py  run_policy_retriever.py  schemas.py
prototype/src/hackathon_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
